--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ html {
 .link {
   text-decoration: none;
   margin: 0;
+
 }
 body {
   font-family: "Roboto", "Open Sans";
@@ -50,6 +51,7 @@ h1, h2, h3, ul, p, li {
 
 /* ======header==== */
 .header-item {
+  position: relative;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -105,6 +107,9 @@ h1, h2, h3, ul, p, li {
   letter-spacing: 0.02em;
   color: var(--black-color);
 }
+
+
+
 .contact-link-icon {
   vertical-align: text-top;
   margin-right: 10px;
@@ -151,18 +156,39 @@ h1, h2, h3, ul, p, li {
 .header-list-adress .header-items-adress:not(:last-child) {
   margin-right: 30px;
 }
+header {
+border-bottom: 1px solid #ECECEC;
+}
 
 .header-navigation,
 .header-container {
   display: flex;
   align-items: center;
-  /* border-bottom: 1px solid #ECECEC; */
+  
 }
-header {
-  border-bottom: 1px solid #ECECEC;
+.activ {
+  color: var(--blue-color);
 }
 
+.activ::after {
+  position: absolute;
+  display: inline-block;
+  content: '';
+  width: 100%;
+  height: 4px;
+  background: #2196F3;
+  border-radius: 2px;
+  bottom: 0;
+  left: 0;
+}
+
+
+
+
+
+
 /* ===== main ===== */
+
 .section-cap {
   text-align: center;
   padding-bottom: 200px;
@@ -206,16 +232,21 @@ header {
   padding-bottom: 200px;
 }
 .section-cap-btn {
-  background: var(--blue-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
+  display: inline-block;
+  text-align: center;
   font-family: inherit;
+  background: var(--blue-color);
+
   min-width: 216px;
   min-height: 50px;
   padding: 10px 32px;  
-  display: inline-block;
-  text-align: center;
+  
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  cursor: pointer;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1)
   }
 
 .section-advantage-list{
@@ -295,6 +326,9 @@ header {
 .section-work-list{
   display: flex;
 }
+.section-work-item {
+  position: relative;
+}
 .section-work-list .list + .list {
   margin-left: 30px;
 }
@@ -303,6 +337,28 @@ header {
   mix-blend-mode: normal;
   display: block;
 }
+.overley-title {
+  display: inline;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+  background: rgba(47, 48, 58, 0.8);
+  padding-top: 27px;
+  padding-bottom: 27px;
+}
+
+
+
+
 .section-team{
   background: var(--white2-color);
   padding-top: 94px;
@@ -553,6 +609,39 @@ header {
   display: block;
   margin-bottom: 20px;
 }
+.thumb-hidden {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+  transform: translateY(100%);
+  transition: transform 250ms ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.thumb-hidden:hover .overlay {
+  transform: translateX(0);
+}
+
+
+.hiden-card {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  /* padding: 63px 24px; */
+}
+
+
+
+
 .section-project-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -645,5 +734,53 @@ header {
 /* .clients-link:nth-child(1) {
   margin-left: 0;
 } */
+
+
+
+
+/* ==== backdrop ==== */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  }
+  .backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  }
+.modal-btn {
+  cursor: pointer;
+}
+.modal-icon {
+  position: absolute;
+  /* top: 0; */
+  right: 0;
+
+  width: 30px;
+  height: 30px;
+  
+}
+
+
+
 
 
